# playground

./: .gitignore
1_exp_som/io/data/: level1_name.txt  level1_sii.yaml  level2_name.txt  level2_sii.yaml
1_exp_som/io/data/SII/: level1_sii.yaml  level2_sii.yaml
1_exp_som/io/data/find_person/: find_person.csv  find_person_old.csv  results_flash.csv  results_gpt-4o-mini.csv  results_gpt-4o.csv  results_pro.csv
1_exp_som/io/results/: level1_results.csv  level1_results_backup.csv  level2_results_backup.csv
1_exp_som/io/results/ICRA/: level1_results_som_4o.csv  level1_results_yolo_4o.csv  level2_results.csv  level2_results_som_4o.csv  level2_results_yolo_4o.csv  llava_yolo.csv  results_gpt4o.ods
1_exp_som/src/: extraction_text.py  find_person_exp.py  image.py  main.py  pub_image.py  sub_images.py  test_gpt.py  test_gpt_sii.py  test_gpt_sii_som.py  test_llava.py
1_exp_som/yolo/: rgb_yolov8_trt_yamao.launch  yolov8_trt_yamao.launch  yolov8_yamao.py
tamhome_interactive_customer_service/: .gitignore  CMakeLists.txt  README.md  package.xml
tamhome_interactive_customer_service/io/: GoodsList.txt  item.json  main.rviz
tamhome_interactive_customer_service/io/database/: icra_2024.db
tamhome_interactive_customer_service/launch/: interactive_customer_service.launch  teleop_key.launch
tamhome_interactive_customer_service/msg/: Conversation.msg  RobotStatus.msg
tamhome_interactive_customer_service/script/: items.py  parser_utils.py  task_node.py  time_server.py
tamhome_interactive_customer_service/script/state_machine/: give.py  interaction.py  pickup.py  standard.py
tamhome_interactive_customer_service/src/: interactive_customer_service_sample.cpp  teleop_key_ics.cpp  teleop_key_ics_input.cpp
(+77 files in other folders)
